<resources>
    <string name="app_name">Wonder Facts</string>
    <string name="image_desc">Wonder facts text with a logo</string>
    <string name="enter_name">Enter your name</string>
    <string name="start_button">Start</string>
    <string name="hello_text">Hello! Click on the following wonders of the world and learn 5 facts about them</string>
    <string name="petra">Petra</string>
    <string name="bagan">Bagan</string>
    <string name="chichen_itza">Chichen Itza</string>
    <string name="machu_pichu">Machu Pichu</string>
    <string name="great_pyramid">Great Pyramid</string>
    <string name="taj_mahal">Taj Mahal</string>
    <string name="great_wall">Great wall</string>
    <string name="colosseum">Colosseum</string>
    <string name="sigiria">Sigiria</string>
    <string name="ephesus">Ephesus</string>
    <string name="christ_redeemer">Christ Redeemer</string>
    <string name="acropolis">Acropolis</string>
    <string name="initial_string"> </string>
    <string name="petra_facts">
        \n<b>Petra, Jordan</b>
    \n\nPetra is a famous archaeological site in Jordan\'s southwestern desert. It is a representation of Jordan and therefore, Jordan’s most visited tourist attraction.
        \n\n<u>FACTS</u>:
        \n\n1. Petra is believed have been established in 312 BC, making it one of the oldest cities in the world!
        \n\n2. Approximately only 15% of Petra has been explored by archaeologists, which therefore means that there is still plenty to be revealed.
        \n\n3. The name Petra is derived from the Greek word ‘petros’, which means rocks.
        \n\n4. To enter Petra, you need to go through a narrow gorge called the Siq, which is around 1km long. It is bound by cliffs each side which are around 8 metres high!
        \n\n5. The Mummy Returns, Indiana Jones and the Last Crusade are the most noteworthy movies that were filmed at Petra.
        \n
    </string>
    <string name="great_pyramid_facts">
        \n<b>The Great Pyramid of Giza, Egypt</b>
        \n\nThe Great Pyramid of Giza is the oldest and largest of the three pyramids in the Giza pyramid complex bordering present-day Giza in Greater Cairo, Egypt.
        \n\n<u>FACTS</u>:
        \n\n1. Completed c2560 BC, the Great Pyramid stands at 147 metres tall and took over 20 years to build. This meant it was the tallest man-made structure in the world for about 3,800 years.
        \n\n2. It required 2.5 million stone blocks to be cut, moved and positioned.
        \n\n3. The Great Pyramid – also named the Pyramid of Khufu after the fourth dynasty Pharaoh for whom it was built – sits alongside the pyramids of Menkaure and Khafre, and is perfectly aligned with the constellation of Orion.
        \n\n4. Although they are long gone, highly polished limestone blocks – known as casing stones – covered the surface of the Pyramid.The stones reflected the Sun’s light so well that the Egyptians called the Pyramid ‘Ikhet’, meaning the ‘Glorious Light’.
        \n\n5. Despite the scorching heat that can often be felt in Egypt, the temperature inside the pyramids remains a constant 20 C – the average temperature on earth.
        \n
    </string>
    <string name="colosseum_facts">
        \n<b>The Colosseum, Rome</b>
    \n\nThe Colosseum or Coliseum, also known as the Flavian Amphitheatre, is an oval amphitheatre in the centre of the city of Rome, Italy.
        \n\n<u>FACTS</u>:
        \n\n1. The Colosseum was built between 72 A.D and 80 A.D under the Emperor Vespasian, in the heart of Ancient Rome.
        \n\n2. Made from stone and concrete, this magnificent monument was built with the man power of tens of thousands of slaves.
        \n\n3. The Colosseum is the largest amphitheater (meaning “theatre in the round”) in the world!
        \n\n4. Free for all! At the Colosseum’s major events – often those organised and paid for by the emperors themselves – there was no entry fee. And free food was sometimes served, too. Bonus!
        \n\n5. Below the Colosseum were numerous rooms and underground passages. Here is where the animals and gladiators were kept, waiting to meet their fate in the arena above. There were also 36 trap doors in the arena for special effects!
        \n
    </string>
    <string name="machu_pichu_facts">
        \n<b>Machu Pichu, Peru</b>
    \n\nMachu Picchu is an Incan citadel set high in the Andes Mountains in Peru, above the Urubamba River valley.
        \n\n<u>FACTS</u>:
        \n\n1. In the Quechua Indian language, “Machu Picchu” means “Old Peak” or “Old Mountain.”
        \n\n2. Machu Picchu is made up of more than 150 buildings ranging from baths and houses to temples and sanctuaries.
        \n\n3. Machu Picchu was only known locally until Yale Professor Hiram Bingham re-discovered the site in 1911. His book, The Lost City of the Incas, was based on his findings.
        \n\n4. A long-standing dispute between Peru and Yale University has existed over the artifacts collected by Bingham during his exploration of the site. Yale maintains that they own the items while Peru insists they were given on loan.
        \n\n5. Machu Picchu was an astronomical observatory, and its sacred Intihuatana stone accurately indicates the two equinoxes. Twice a year, the sun sits directly over the stone creating no shadow.
        \n
    </string>
    <string name="sigiria_facts">
        \n<b>Sigiria, Sri Lanka</b>
    \n\nSigiria or Sinhagiri is an ancient rock fortress located in the northern Matale District near the town of Dambulla in the Central Province, Sri Lanka. The name refers to a site of historical and archaeological significance that is dominated by a massive column of rock . Sigiria, meaning Lion Rock, is quite literally a large rock with a lion carved into it and an ancient kingdom on top
        \n\n<u>FACTS</u>:
        \n\n1. It wasn’t until 1831 that the abandoned Sigiriya was discovered by British Army Major Jonathan Forbes. He came across the site whilst horseback riding through Sri Lanka. A few decades’ later archaeologists spent time on a research operation in the region.
        \n\n2. The city includes water gardens, a moat, terraced gardens and archaeological features.
        \n\n3. The advanced and impressive hydraulic system consisting of canals, lakes, dams, bridges, fountains and underground water pumps still provides water to the site’s gardens today.
        \n\n4. Considered one of the best examples of ancient urban planning, the site of Sigiriya became an UNESCO World Heritage Site in 1982.
        \n\n5. The rock is 200 metres high and visitors can walk the 1,200 steps, divided amongst a number of staircases, to the top.
        \n
    </string>
    <string name="taj_mahal_facts">
        \n<b>Taj Mahal, Agra</b>
    \n\nThe Taj Mahal is an ivory-white marble mausoleum on the southern bank of the river Yamuna in the Indian city of Agra. It was commissioned in 1632 by the Mughal emperor Shah Jahan to house the tomb of his favourite wife, Mumtaz Mahal; it also houses the tomb of Shah Jahan himself.
        \n\n<u>FACTS</u>:
        \n\n1. The Taj Mahal was built by a whopping 22,000 laborers, painters, stonecutters, embroidery artists.
        \n\n2. Legend has it that Emperor Shah Jahan intended to build another Taj Mahal in black marble across the river but a war with his sons interrupted these plans.
        \n\n3. The changing moods of the Emperors wife are well captured by the changing hues of the Mausoleum at different times of the day. It takes a pinkish hue in the morning, milky white in the evening and golden at night when illuminated by moonlight.
        \n\n4. The most recognizable feature is the white dome at the peak of the mausoleum. Often called the \'onion dome\', it rises to about 35 meters (115 feet) and is surrounded by four other domes.
        \n\n5. If it was to be built today, Taj Mahal would cost the Emperor about US$100 to make it as beautiful as it is.
        \n
    </string>
    <string name="great_wall_facts">
        \n<b>The Great Wall of China, China</b>
    \n\nThe Great Wall of China is the collective name of a series of fortification systems generally built across the historical northern borders of China to protect and consolidate territories of Chinese states and empires against various nomadic groups of the steppe and their polities
        \n\n<u>FACTS</u>:
        \n\n1. With a total length of 21,196.18 km (13,170.70 miles), equal to half the length of the Equator, the Great Wall of China is the longest feat of human engineering.
        \n\n2. As a must-see in China, it attracts 50 million visitors every year, and had been visited by more than 460 state heads and VIPs from around the world.
        \n\n3. It is named a ‘Wall’, but actually it is not only a simple ‘Wall’. Historical facts show that it was a comprehensive fortification, consisting of overlapping walls and trenches for blocking enemies, watchtowers and beacon towers for signals and communication, fortresses for head-on battles, and barracks to accommodate soldiers.
        \n\n4. In early 19th century, the immense scale of the Wall had once given rise to a rumor that it could be seen from the moon with naked eyes. In fact, it is invisible from the space. Difficulty in observing the wall with unaided eyes from space equals that of seeing a hair from two miles away!
        \n\n5. The Great Wall is changing all the time; to be specific - it is disappearing year by year. According to statistics from UNESCO, nearly one third of the walls have already disappeared and will disappear altogether within 30 years.
        \n
    </string>
    <string name="chichen_itza_facts">
        \n<b>Chichen Itza, Mexico</b>
    \n\nChichén Itzá is a complex of Mayan ruins on Mexico\'s Yucatán Peninsula. Rich in history and the centre of pilgrimage for the ancient Maya civilization for over 1,000 years, Chichen Itza is full of interesting facts.
        \n\n<u>FACTS</u>:
        \n\n1. Chichen Itza is classified as one of the New Seven Wonders of the World and in 1988 was enlisted as an UNESCO World Heritage Site
        \n\n2. The term Chichen Itza means ‘the mouth at the well of Itza’. It is believed Itza means ‘water magicians’, deriving from the Mayan Itz for ‘magic’ and á for ‘water’.
        \n\n3. The design and layout of Chichen Itza was clearly well planned and builders constructed temples and pyramids in sets of clusters.
        \n\n4. During the Spring (20th of March) and Autumn Equinox (22nd September), sunrays creates a shadow across the Kukulkan Pyramid that gives the appearance of a serpent slithering down the staircase.
        \n\n5. Many of the sites in Chichen Itza are known for their unusual sounds. If you clap once from one end of the Ball Court, it produces nine echoes in the middle of the court. Additionally, a clap in front of the Kukulkan Pyramid creates an echo resembling the serpent’s chirp.
        \n
    </string>
</resources>